--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     compile 'com.baoyz.actionsheet:library:1.1.5'
     compile 'com.jcodecraeer:xrecyclerview:1.2.7'
     compile 'me.drakeet.materialdialog:library:1.3.1'
+    compile 'com.facebook.stetho:stetho:1.3.1'
     compile project(':multi-image-selector')
+    compile 'com.facebook.stetho:stetho-okhttp3:1.3.1'
     compile files(':libs/zxing.jar')
 }
